# openarm_ws

./: .gitignore  AGENTS.md  FIXES_SUMMARY.md  MUJOCO_LOG.TXT  README.md  debug_grasp_system.sh
openarm_mujoco/: demo.py
openarm_mujoco/v1/: demo.py  openarm_bimanual_cam_v3.xml  scene.xml
src/mujoco_ros2/: CMakeLists.txt
src/mujoco_ros2/model/: scene.xml
src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_cameras.cpp  mujoco_rendering.cpp
src/openarm_description/urdf/robot/: openarm_robot.xacro  v10.urdf.xacro
src/openarm_grasp_planner/: package.xml  setup.cfg  setup.py
src/openarm_grasp_planner/launch/: full_integration.launch.py
src/openarm_grasp_planner/openarm_grasp_planner/: __init__.py  full_verification.py  grasp_planner.py  gripper_controller.py
src/openarm_mujoco_viewer/openarm_mujoco_viewer/: openarm_bimanual_viewer.py
src/openarm_ros2/openarm_bimanual_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  ros2_controllers.yaml
src/openarm_ros2/openarm_bringup/: CMakeLists.txt
src/openarm_ros2/openarm_bringup/config/v10_controllers/: openarm_v10_bimanual_controllers.yaml
src/openarm_ros2/openarm_bringup/launch/: openarm_bimanual_mujoco.launch.py  openarm_bimanual_mujoco_moveit.launch.py  openarm_mujoco.launch.py
src/openarm_vision/openarm_vision/: banana_detector.py  virtual_camera.py
